--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "Jokes",
   "description": "Read jokes for free",
-  "version": "1.0",
+  "version": "1.0.2",
   "icons": {
     "16": "./images/smile16.png",
     "32": "./images/smile32.png",
@@ -10,7 +10,7 @@
     "128": "./images/smile128.png"
   },
   "browser_action": {
-    "default_icon":{
+    "default_icon": {
       "16": "./images/smile16.png",
       "32": "./images/smile32.png",
       "48": "./images/smile48.png",
@@ -18,7 +18,5 @@
     },
     "default_popup": "popup.html"
   },
-  "permissions": [
-    "activeTab"
-  ]
+  "permissions": ["activeTab"]
 }
